syntax = "proto3";

package user;

option go_package = "./pkg/pb/user";

service User {
    rpc UserSignUp(UserSignupRequest) returns (UserSignupResponse) {};
    rpc UserLogin(UserLoginRequest) returns (UserLoginResponse) {};
    rpc AddProfile(AddProfileRequest) returns (AddProfileResponse); 
    rpc GetProfile(GetProfileRequest) returns (GetProfileResponse); 
}

message UserSignupRequest {
    string email = 1;
    string password = 2;
    string firstname = 3;
    string lastname = 4;
    string phone_number = 5;
    string date_of_birth = 6;
    string gender = 7;
    string bio = 8;
}

message UserSignupResponse {
    int64 status = 1;
    UserDetails user = 2;
    string token = 3;
    string error = 4;
}

message UserDetails {
    uint64 id = 1;
    string email = 2;
    string firstname = 3;
    string lastname = 4;
    string phone_number = 5;
    string date_of_birth = 6;
    string gender = 7;
}

message UserLoginRequest {
    string email = 1;
    string password = 2;
}

message UserLoginResponse {
    int64 status = 1;
    UserDetails user = 2;
    string token = 3;
    string error = 4;
}
message AddProfileRequest {
    int32 id = 1;
    string name = 2;
    string username = 3;
    string email = 4;
    string website = 5;
    string location = 6;
    string phone = 7;
    string bio = 8;
}

message AddProfileResponse {
    int64 status = 1;
    string error = 2;
}
message GetProfileRequest {
    int32 id = 1;
}

message GetProfileResponse {
    int64 status = 1;
    repeated UserProfile profiles = 2;
    string error = 3;
}

message UserProfile {
    uint64 id = 1;
    string name = 2;
    string username = 3;
    string email = 4;
    string website = 5;
    string location = 6;
    string phone = 7;
    string bio = 8;
}